--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Vue mailing list</title>
   </head>
   <body>
-    <div id="app">{{ message }}</div>
+    <div id="app">
+      <div>
+        <ul v-for="(mail, index) in mails">
+          <li>{{ mail.data.response }}</li>
+        </ul>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./javascript/main.js"></script>
