--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="app">
       <div>
         <ul v-for="(mail, index) in mails">
-          <li>{{ mail.data.response }}</li>
+          <li>{{ mail.data }}</li>
         </ul>
       </div>
     </div>
