--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <body>
     <div id="app">
       <div>
-        <ul v-for="(mail, index) in mails">
-          <li>{{ mail.data }}</li>
+        <button @click="mailGeneration">Genera mail</button>
+        <ul v-if="mails.length === 10">
+          <li v-for="(mail, index) in mails" :key="index">{{ mail}}</li>
         </ul>
+        <div v-else>Generazione...</div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
