--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Vue mailing list</title>
   </head>
   <body>
-    <div id="app">
-      <div>
+    <div id="app" v-cloak>
+      <div class="container">
         <button @click="mailGeneration()">Genera mail</button>
         <ul v-if="mails.length === 10">
           <li v-for="(mail, index) in mails" :key="index">{{ mail }}</li>
